plugins {
    id 'java'
    id "net.serenity-bdd.serenity-gradle-plugin" version "3.9.8"
}

group 'co.com.screenplay.project'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    serenityVersion = '3.9.8'
}

dependencies {
    testImplementation "net.serenity-bdd:serenity-core:${serenityVersion}"
    testImplementation "net.serenity-bdd:serenity-junit:${serenityVersion}"
    testImplementation "net.serenity-bdd:serenity-cucumber:${serenityVersion}"
    testImplementation "net.serenity-bdd:serenity-screenplay:${serenityVersion}"
    testImplementation "net.serenity-bdd:serenity-screenplay-webdriver:${serenityVersion}"

    testImplementation "com.github.javafaker:javafaker:1.0.2"
    testImplementation "junit:junit:4.13.2"
    testImplementation "ch.qos.logback:logback-classic:1.2.10"
}

test {
    useJUnit()
    testLogging.showStandardStreams = true
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
}
serenity {
    testRoot = "co.com.screenplay.project.runners"
    requirementsBaseDir = "src/test/resources/features"
}